Added introduction. Need to add 'further work' to conclusion.

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -97,3 +97,63 @@
   year={1996},
   publisher={The John Hopkins University Press}
 }
+
+@article{plumbley2010sparse,
+  title={Sparse representations in audio and music: from coding to source separation},
+  author={Plumbley, Mark D and Blumensath, Thomas and Daudet, Laurent and Gribonval, R{\'e}mi and Davies, Mike E},
+  journal={Proceedings of the IEEE},
+  volume={98},
+  number={6},
+  pages={995--1005},
+  year={2010},
+  publisher={IEEE}
+}
+
+@article{gribonval2003harmonic,
+  title={Harmonic decomposition of audio signals with matching pursuit},
+  author={Gribonval, R{\'e}mi and Bacry, Emmanuel},
+  journal={IEEE Transactions on Signal Processing},
+  volume={51},
+  number={1},
+  pages={101--111},
+  year={2003},
+  publisher={IEEE}
+}
+
+@inproceedings{lagrange2003enhanced,
+  title={Enhanced partial tracking using linear prediction},
+  author={Lagrange, Mathieu and Marchand, Sylvain and Raspaud, Martin and Rault, J-B},
+  booktitle={Proceedings of the Digital Audio Effects (DAFx03) Conference},
+  pages={141--146},
+  year={2003}
+}
+
+@article{kereliuk2008improved,
+  title={Improved hidden Markov model partial tracking through time-frequency analysis},
+  author={Kereliuk, Corey and Depalle, Philippe},
+  journal={Proceedings of the Digital Audio Effects (DAFx-08)},
+  pages={1--4},
+  year={2008}
+}
+
+@article{betser2009sinusoidal,
+  title={Sinusoidal polynomial parameter estimation using the distribution derivative},
+  author={Betser, Micha{\"e}l},
+  journal={Signal Processing, IEEE Transactions on},
+  volume={57},
+  number={12},
+  pages={4633--4645},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{nuttall1981some,
+  title={Some windows with very good sidelobe behavior},
+  author={Nuttall, Albert},
+  journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+  volume={29},
+  number={1},
+  pages={84--91},
+  year={1981},
+  publisher={IEEE}
+}
