--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -129,7 +129,7 @@
 }
 
 @article{kereliuk2008improved,
-  title={Improved hidden Markov model partial tracking through time-frequency analysis},
+  title={Improved hidden {Markov} model partial tracking through time-frequency analysis},
   author={Kereliuk, Corey and Depalle, Philippe},
   journal={Proceedings of the Digital Audio Effects (DAFx-08)},
   pages={1--4},
